--- a/test_configuration.cfg
+++ b/test_configuration.cfg
@@ -1,7 +1,7 @@
 [Params]
 vectorspace = vectors/crawl-300d-2M-subword.vec
 dataset = /kaggle/working/EmotionDetection/data/wang_cleaned_full_dataset.csv
-test_file = data/test.txt
+test_file = /kaggle/working/EmotionDetection/data/test.txt
 target_emotion = anger
 
 max_features = 25000  
